
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   218: sluys, 04/08/2009
     - templateLAL15() and templateLALnonSpinning(): return zeroes for the waveform
       on LAL error rather than exit, except when calling the routine for an injection.
     - fixed some typos
       
   213: sluys, 21/07/2009
     - Pass trigger values from the command line in a waveform-independent way
       - this means passing the distance in Mpc rather than d^3 or log(d)
     
   212: sluys, 21/07/2009
     - Merged templateLAL15() and LALHpHc15() into templateLAL15() (old routine is now
       called templateLAL15old(), please see if it and LALHpHc15() can be removed)
     - TemplateLAL15() now returns zeroes when called with Mtot>140Mo, instead of crashing
     - Exit with error when calling waveforms for injections with too high mass
     - Added options 14 and 15 for priorType, as was already documented
     - Some commenting, cleaning and debugging
     
   207: sluys, 15/07/2009
     - GeneratePPNtwoPN produces an error when called for Mtot>100Mo. Catch it and
       return zeroes for the waveform instead.
     
   206: sluys, 15/07/2009
     - Added safety check: don't use injection values as starting values if no injection was done
     - Some cosmetic changes
     
   205: sluys, 14/07/2009
     - Added d^3 prior for testing with Apostolatos waveform; log(d) works like before
     - Minor cosmetics
     
   204: sluys, 13/07/2009
     - Changed doc/input_all/SPINspiral.input.mcmc.  Added:
       - acceptRateTarget: target acceptance rate for MCMC (0.0-1.0)
       - minlogL: inimum value for the log Likelihood to accept a jump
     - Some minor cosmetic changes and cleaning
     
   203: sluys, 13/07/2009
     - Changed output somewhat
     
   201-202: sluys, 13/07/2009
     - fix memory leaks
     
   200: sluys, 12/07/2009