@@ -2,10 +2,15 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   219: sluys, 19/08/2009
+     - Bugfix: starting parameters were overwritten with injection parameters when
+       using different waveforms for the injection and MCMC
+     - Bugfix(?): PPN waveform doesn't use RA, probably 'longitude'
+     
    218: sluys, 04/08/2009
      - templateLAL15() and templateLALnonSpinning(): return zeroes for the waveform
        on LAL error rather than exit, except when calling the routine for an injection.
-     - fixed some typos
+     - Fixed some typos
        
    213: sluys, 21/07/2009
      - Pass trigger values from the command line in a waveform-independent way
